arrow2_convert/tests/ui/struct_incorrect_type.stderr
error[E0277]: the trait bound `String: Borrow<Vec<u8>>` is not satisfied
 --> tests/ui/struct_incorrect_type.rs:4:17
  |
4 | #[derive(Debug, ArrowField)]
  |                 ^^^^^^^^^^ the trait `Borrow<Vec<u8>>` is not implemented for `String`
  |
  = help: the following implementations were found:
            <String as Borrow<str>>
  = note: this error originates in the derive macro `ArrowField` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/struct_incorrect_type.rs:4:17
  |
4 | #[derive(Debug, ArrowField)]
  |                 ^^^^^^^^^^ expected struct `String`, found struct `Vec`
  |
  = note: expected struct `String`
             found struct `Vec<u8>`
  = note: this error originates in the derive macro `ArrowField` (in Nightly builds, run with -Z macro-backtrace for more info)
